--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2007,10 +2007,10 @@
 		position: relative;
 		padding: 4em 0 2em 0;
 		background-image: url("images/header.svg");
-		background-image: url("images/overlay.png"), url("images/header.svg"), -moz-linear-gradient(75deg, #1ebaff 15%, #F2B69D 55%);
-		background-image: url("images/overlay.png"), url("images/header.svg"), -webkit-linear-gradient(75deg, #1ebaff 15%, #F2B69D 55%);
-		background-image: url("images/overlay.png"), url("images/header.svg"), -ms-linear-gradient(75deg, #1ebaff 15%, #F2B69D 55%);
-		background-image: url("images/overlay.png"), url("images/header.svg"), linear-gradient(75deg, #1ebaff 15%, #F2B69D 55%);
+		background-image: url("images/overlay.png"), url("images/header.svg"), -moz-linear-gradient(75deg, #1ebaff 15%, #0C4A66 55%);
+		background-image: url("images/overlay.png"), url("images/header.svg"), -webkit-linear-gradient(75deg, #1ebaff 15%, #0C4A66 55%);
+		background-image: url("images/overlay.png"), url("images/header.svg"), -ms-linear-gradient(75deg, #1ebaff 15%, #0C4A66 55%);
+		background-image: url("images/overlay.png"), url("images/header.svg"), linear-gradient(75deg, #1ebaff 15%, #0C4A66 55%);
 		background-color: #1ebaff;
 		background-size: 100% 620%;
 		background-size: 128px 128px, 100% 620%, auto;
